force-app/main/default/objects/clcommon__Collateral__c/fields/Actual_Value_Valuer__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value_Valuer__c</fullName>
    <label>Actual Value Valuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>