force-app/main/default/objects/clcommon__Collateral__c/fields/Arms_Length_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Arms_Length_Transaction__c</fullName>
    <label>Arms Length Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>