force-app/main/default/objects/clcommon__Collateral__c/fields/Arms_Length_Valuer_Com_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Arms_Length_Valuer_Com_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Arms_Length_Transaction__c, &apos;No&apos;), OR(ISPICKVAL(Arms_Length_Valuer_Commentary__c, &apos;No&apos;), ISPICKVAL(Arms_Length_Valuer_Commentary__c, &apos;&apos;)), FALSE)</formula>
    <label>Arms Length Valuer Com Warning Check</label>
    <type>Checkbox</type>
</CustomField>