force-app/main/default/objects/clcommon__Collateral__c/fields/Builder_Type_List__c.field-meta.xml
<CustomField>
    <fullName>Builder_Type_List__c</fullName>
    <label>Builder Type List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>