force-app/main/default/objects/clcommon__Collateral__c/fields/Check_Val_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Val_Ordered_Date__c</fullName>
    <formula>IF( ISBLANK( Valuation_Received_Date__c)  ||  ISNULL(Valuation_Received_Date__c)  , True, False)</formula>
    <label>Check Val Ordered Date</label>
    <type>Checkbox</type>
</CustomField>