force-app/main/default/objects/clcommon__Collateral__c/fields/Check_Val_Received__c.field-meta.xml
<CustomField>
    <fullName>Check_Val_Received__c</fullName>
    <label>Check Val Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>