force-app/main/default/objects/clcommon__Collateral__c/fields/Check_Val_Value__c.field-meta.xml
<CustomField>
    <fullName>Check_Val_Value__c</fullName>
    <label>Check Val Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>