force-app/main/default/objects/clcommon__Collateral__c/fields/Check_Val_Value_Render__c.field-meta.xml
<CustomField>
    <fullName>Check_Val_Value_Render__c</fullName>
    <description>Check Val Value Render</description>
    <formula>IF(OR(OR((ISPICKVAL(Check_Val_Received__c,&apos;No&apos;)),(ISPICKVAL(Check_Val_Received__c,&apos;&apos;))),(ISNULL(clcommon__Value_Date__c))),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Val Value Render</label>
    <type>Text</type>
</CustomField>