force-app/main/default/objects/clcommon__Collateral__c/fields/Check_Val_Value_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Check_Val_Value_Rule_Check__c</fullName>
    <description>Check Val Value Rule Check</description>
    <formula>IF(ISNULL(Check_Val_Value__c) == false &amp;&amp;(Check_Val_Value__c &lt; (clcommon__Value__c*(90/100))),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Val Value Rule Check</label>
    <type>Text</type>
</CustomField>