force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Acceptance_Date__c</fullName>
    <label>Acceptance Date</label>
    <type>Date</type>
</CustomField>