force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Account_Number__c</fullName>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>