force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Acknowledgement_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Acknowledgement_Type__c</fullName>
    <label>Acknowledgement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combined</fullName>
            </value>
            <value>
                <fullName>Separate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>