force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>