force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Age__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Age__c</fullName>
    <description>This will display the age of vehicle in Years</description>
    <inlineHelpText>This will display the age of vehicle in Years</inlineHelpText>
    <label>Age (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>