force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Agricultural_Use__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Agricultural_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agricultural Use</label>
    <type>Checkbox</type>
</CustomField>