force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Airport__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Airport__c</fullName>
    <label>Airport/Home Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>