force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Appraisal_Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Appraisal_Disclosure_Date__c</fullName>
    <description>This is the date when the copy of appraisal report was shared with the customer</description>
    <inlineHelpText>This is the date when the copy of appraisal report was shared with the customer</inlineHelpText>
    <label>Appraisal Disclosure Date</label>
    <type>Date</type>
</CustomField>