force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Appraisal_Waiver__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Appraisal_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the checkbox to indicate if the borrower has waived the right to receive an appraisal report copy</description>
    <inlineHelpText>This is the checkbox to indicate if the borrower has waived the right to receive an appraisal report copy</inlineHelpText>
    <label>Appraisal Waiver</label>
    <type>Checkbox</type>
</CustomField>