force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Available_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is difference between the (Value__c - Total_Lien_Placed__c) but the default value is set to value__c field</description>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>