force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Block__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Block__c</fullName>
    <label>Block</label>
    <length>150</length>
    <type>Text</type>
</CustomField>