force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Book_Entry__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Book_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book Entry</label>
    <type>Checkbox</type>
</CustomField>