force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Book_Value__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Book_Value__c</fullName>
    <description>Used to store current value of an equipment.</description>
    <inlineHelpText>Initially it will be same as purchased price and on equipment depreciation this field will be updated to ending NBV</inlineHelpText>
    <label>Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>