force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Census_Tract_Number__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Census_Tract_Number__c</fullName>
    <description>The census tract number for the real estate property.</description>
    <inlineHelpText>Census tract number for the real estate property</inlineHelpText>
    <label>Census Tract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>