force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Certificated__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Certificated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificated</label>
    <type>Checkbox</type>
</CustomField>