force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__City__c.field-meta.xml
<CustomField>
    <fullName>clcommon__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>