force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Collateral_Affixed_to_Site__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Collateral_Affixed_to_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Affixed to Site</label>
    <type>Checkbox</type>
</CustomField>