force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Collateral_Category__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Collateral_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Category</label>
    <referenceTo>clcommon__Collateral_Category__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>