force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Collateral_Code__c</fullName>
    <label>Collateral Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>