force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Collateral_Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Collateral_Insurance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collateral Insurance Required</label>
    <type>Checkbox</type>
</CustomField>