force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Collateral_Name__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Collateral_Name__c</fullName>
    <label>Collateral Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>