force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Collateral_Secures__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Collateral_Secures__c</fullName>
    <label>Collateral Secures</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Note</fullName>
            </value>
            <value>
                <fullName>Credit Agreement</fullName>
            </value>
            <value>
                <fullName>Other Guaranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>