force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Commercial_Use__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Commercial_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Use</label>
    <type>Checkbox</type>
</CustomField>