force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Company__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Company to which the Collateral belongs.</description>
    <inlineHelpText>The Company to which the Collateral belongs.</inlineHelpText>
    <label>Company</label>
    <referenceTo>clcommon__Company__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>