force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Condo__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Condo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condominium</label>
    <type>Checkbox</type>
</CustomField>