force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Contract_Date__c</fullName>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>