force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Contracting_Party__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Contracting_Party__c</fullName>
    <label>Contracting Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>