force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Copy_From_Equipment__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Copy_From_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the value of the equipment Id of copied equipment</description>
    <inlineHelpText>Stores the value of the equipment Id of copied equipment</inlineHelpText>
    <label>Copy From Equipment</label>
    <referenceTo>clcommon__Collateral__c</referenceTo>
    <relationshipLabel>Collaterals (Copy From Equipment)</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>