force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Cross_Collateralised__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Cross_Collateralised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be set to true if a single collateral is linked to multiple applications as a collateral.</description>
    <inlineHelpText>This checkbox will be set to true if a single collateral is linked to multiple applications as a collateral.</inlineHelpText>
    <label>Cross Collateralised</label>
    <type>Checkbox</type>
</CustomField>