force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Current_Mileage__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_Mileage__c</fullName>
    <description>The field is to capture the current mileage of the Automobile.</description>
    <label>Current Mileage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>