force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Dealer_Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Dealer_Funding_Status__c</fullName>
    <description>Shows the status of the dealer funding</description>
    <label>Dealer Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partially Funded</fullName>
            </value>
            <value>
                <fullName>Fully Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>