force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>