force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Depreciate_Leased_Equipment__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Depreciate_Leased_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If an equipment is leased and still customer wants to depreciate at equipment level. (Internal Field)</description>
    <label>Depreciate Leased Equipment</label>
    <type>Checkbox</type>
</CustomField>