force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Depreciation_Basis_Amount__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Depreciation_Basis_Amount__c</fullName>
    <label>Depreciation Basis Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>