force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Depreciation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Depreciation_Start_Date__c</fullName>
    <description>From this date onward the equipment will start depreciating. If empty will be defaulted to purchased date.</description>
    <inlineHelpText>From this date onward the equipment will start depreciating. If empty will be defaulted to purchased date.</inlineHelpText>
    <label>Depreciation Start Date</label>
    <type>Date</type>
</CustomField>