force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Describe_Log_Books__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Describe_Log_Books__c</fullName>
    <label>Describe Log Books</label>
    <length>255</length>
    <type>Text</type>
</CustomField>