force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Description__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>