force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Down_Payment__c</fullName>
    <description>This field captures the down payment information.</description>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>