force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Equipment_Description__c</fullName>
    <description>Can be used to store information about the equipment</description>
    <inlineHelpText>Can be used to store information about the equipment</inlineHelpText>
    <label>Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>