force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Equipment_Id__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Equipment_Id__c</fullName>
    <description>It will be used as unique identifier for Equipment record type collaterals.</description>
    <formula>SUBSTITUTE(Name, &apos;COL&apos;, &apos;Eq&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Id</label>
    <type>Text</type>
</CustomField>