force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Equipment_Life_in_Months__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Equipment_Life_in_Months__c</fullName>
    <description>Used to store the life of an equipment.</description>
    <inlineHelpText>e.g if an equipment life time is for an year then user should record it as 12 (months count)</inlineHelpText>
    <label>Equipment Life in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>