force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Equipment_NBV__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Equipment_NBV__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Internal field, used to accept the change in salvage value and accordingly to create the depreciation stream</description>
    <label>Equipment NBV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>