force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Copier</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>