force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Estimated_Value__c</fullName>
    <description>This is the Estimated value to be filled when creating a collateral</description>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>