force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Existing_Lien__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Existing_Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Lien</label>
    <type>Checkbox</type>
</CustomField>