force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__FAA_Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>clcommon__FAA_Cover_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAA Cover Letter</label>
    <type>Checkbox</type>
</CustomField>