force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Financial_Statement_Template__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Financial_Statement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup will define the relationship between collateral and financial statement template.</description>
    <label>Financial Statement Template</label>
    <referenceTo>clcommon__Financial_Statement_Template__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>