force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__First_Lien__c.field-meta.xml
<CustomField>
    <fullName>clcommon__First_Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Lien</label>
    <type>Checkbox</type>
</CustomField>