force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Flood_Insurance_Amount_Required__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Flood_Insurance_Amount_Required__c</fullName>
    <description>This field will store the flood insurance amount that is required for that collateral</description>
    <inlineHelpText>This field will store the flood insurance amount that is required for that collateral</inlineHelpText>
    <label>Flood Insurance Amount Required</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>