force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Fuel_Type__c</fullName>
    <description>To capture the type pf fuel used.</description>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>