force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Generate_Book_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Generate_Book_Depreciation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is selected then only book deprecation will be generated</description>
    <label>Generate Book Depreciation</label>
    <type>Checkbox</type>
</CustomField>