force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Homestead_Property__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Homestead_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homestead Property</label>
    <type>Checkbox</type>
</CustomField>