force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Hull_Type__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Hull_Type__c</fullName>
    <description>To capture the type of hull used</description>
    <label>Hull Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>