force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__IDERA__c.field-meta.xml
<CustomField>
    <fullName>clcommon__IDERA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDERA</label>
    <type>Checkbox</type>
</CustomField>