force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Include_Collateral_Receipt__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Include_Collateral_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Collateral Receipt</label>
    <type>Checkbox</type>
</CustomField>