force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Include_Land__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Include_Land__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Land</label>
    <type>Checkbox</type>
</CustomField>