force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Industry_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Industry_Classification_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Industry classification code for the collateral</description>
    <label>Industry Classification Code</label>
    <referenceTo>clcommon__Industry_Classification_Code__c</referenceTo>
    <relationshipLabel>Collaterals</relationshipLabel>
    <relationshipName>Collaterals</relationshipName>
    <type>Lookup</type>
</CustomField>