force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Inspection_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Report</label>
    <type>Checkbox</type>
</CustomField>