force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the Insurance Company Information associated with the Insurance linked to the        Collateral</description>
    <inlineHelpText>This field will store the Insurance Company Information associated with the Insurance linked to the Collateral</inlineHelpText>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collaterals (Insurance Company)</relationshipLabel>
    <relationshipName>CompanyCollaterals</relationshipName>
    <type>Lookup</type>
</CustomField>