force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Insurance_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Insurance_Company_Name__c</fullName>
    <label>Insurance Company Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>