force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Is_UCC__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Is_UCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UCC</label>
    <type>Checkbox</type>
</CustomField>