force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Issued_By__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Issued_By__c</fullName>
    <label>Issued By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Other Issuer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>