force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Land_Improvements__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Land_Improvements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is to indicate of there any current or proposed improvements on this land. This checkbox must be enabled only if the &quot;Include Land&quot; field is true.</description>
    <inlineHelpText>This checkbox is to indicate of there any current or proposed improvements on this land. This checkbox must be enabled only if the &quot;Include Land&quot; field is true.</inlineHelpText>
    <label>Land Improvements</label>
    <type>Checkbox</type>
</CustomField>