force-app/main/default/objects/clcommon__Collateral__c/fields/clcommon__Leasehold__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Leasehold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leasehold</label>
    <type>Checkbox</type>
</CustomField>